Fix fs-extra, hide scrollbar in DE
[Issue] https://github.com/Samsung/TAU-Design-Editor/issues/134
[Problem] there was standard scrollbard visible in lists
[Solution] I've hidded it in all views in DE. Also I've added small fix
to fs-extra.

--- a/design-editor/src/templates/preview-helper.css
+++ b/design-editor/src/templates/preview-helper.css
@@ -1,10 +1,5 @@
-.ui-scroller::-webkit-scrollbar, .ui-scrollview-clip::-webkit-scrollbar {
+*::-webkit-scrollbar {
 	display: none;
-}
-
-.ui-scroller, .ui-scrollview-clip {
-	-ms-overflow-style: none;
-	scrollbar-width: none;
 }
 
 * {
@@ -19,4 +14,7 @@
 	-moz-user-drag: none;
 	-o-user-drag: none;
 	user-drag: none;
+
+	-ms-overflow-style: none;
+	scrollbar-width: none;
 }
